@@ -1,3 +1,9 @@
+2005-08-19 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b11
+
+	* Fix: Make it possible to have Gallery as startpage in Postnuke or phpNuke.
+
+	* Change: Url to w3c html validator.
+
 2005-08-17 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b10
 
 	* Fix: When using do_command.php e.g.for creating new album and Gallery is embedded,
